# bdr_be

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  render.yaml
app/: main.py
app/assets/: G3 Electrical - Bidding SOP - Checklist.docx  G3 Electrical - Bidding SOP - Onboarding Guide.docx  G3 Electrical - Bidding SOP - Procedure.docx  proposal_template.docx  ~$oposal_template.docx
app/core/: config.py  deps.py  ratelimit.py  roles.py  security.py  supabase_client.py
app/models/: schemas.py
app/routers/: analytics.py  boq_analysis.py  estimator.py  files.py  general_material.py  gono.py  notes.py  notifications.py  outcome.py  pricing.py  projects.py  proposals.py  reference.py  rfqs.py  todos.py  users.py  vendors.py  workflow.py
app/services/: analytics_metrics.py  gono.py  (+23 more)
excel_format/: 6954_Lighting_RFQ.xlsx  BOQ - COUNTS.xlsx
scripts/: backfill_previews.py  bootstrap_admin.py  generate_bidding_sops.py  make_app_logo.py  make_email_logo.py  patch_proposal_template.py  translate_catalog.py
tests/: conftest.py  test_analytics_metrics.py  test_boq_extraction.py  test_due_reminders.py  test_email_branding.py  test_general_material.py  test_gono.py  test_notes.py  test_notification_email.py  test_notification_prefs.py  test_notifications.py  test_office_preview.py  test_outcome.py  test_pricing.py  test_project_gcs.py  test_project_redaction.py  test_proposal_docx.py  test_proposal_scope.py  test_proposal_send.py  test_rfq_inbox.py  test_rfq_sending.py  test_storage_signed_cache.py  test_todos.py  test_users_me.py  test_workflow.py
(+40 files in other folders)
