[project]
name = "bdr-be"
version = "0.1.0"
description = "BDR bidding-process automation API (G3 Electrical)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "supabase>=2.10",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
    "msal>=1.31",
    "python-multipart>=0.0.12",
    "anthropic>=0.40",
    "openpyxl>=3.1",
    "openai>=1.50",
    "python-docx>=1.2",
    "pypdf>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = false
